Parameterize no log flag

--- a/roles/gateway_common/tasks/initial-update-root-password.yml
+++ b/roles/gateway_common/tasks/initial-update-root-password.yml
@@ -1,6 +1,6 @@
 ---
 - name: Update expired root user password
-  no_log: true # don't log decrypted passwords in responses
+  no_log: "{{ no_log }}" # don't log decrypted passwords in responses
   expect:
     command: sshpass -p '{{ gateway_ssgconfig_password }}' ssh {{ ansible_ssh_extra_args }} {{ ansible_user }}@{{ ansible_host }}
     timeout: "{{ gateway_ssh_timeout }}"
