--- a/roles/gateway_processing_node/tasks/main.yml
+++ b/roles/gateway_processing_node/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check if destination Gateway node is already configured. # noqa 305 - no alternative to shell module
-  no_log: true # don't log decrypted passwords
+  no_log: "{{ no_log }}" # don't log decrypted passwords
   shell:
     cmd: sshpass -p '{{ gateway_ssgconfig_password }}' {{ command_ssh_dest_gateway }} '{{ command_check_node_configured }}'
   register: configured
@@ -22,7 +22,7 @@
         dest: "{{ temp_dir.path }}/{{ inventory_hostname }}.properties"
       register: template_file
     - name: Set values in node properties template file.
-      no_log: true # don't log decrypted passwords
+      no_log: "{{ no_log }}" # don't log decrypted passwords
       lineinfile:
         path: "{{ template_file.dest }}"
         regexp: '{{ item.from }}'
@@ -45,7 +45,7 @@
         - { from: '^configure.node', to: 'configure.node={{ configure_node }}' }
       register: updated_node_properties
     - name: Auto-provision the new Gateway node.
-      no_log: true # don't log decrypted passwords
+      no_log: "{{ no_log }}" # don't log decrypted passwords
       shell:
         cmd: cat {{ template_file.dest }} | sshpass -p '{{ gateway_ssgconfig_password }}' {{ command_ssh_dest_gateway }} '{{ command_autoprovision_node }}'
       register: status
