--- a/roles/gateway_import_database/tasks/main.yml
+++ b/roles/gateway_import_database/tasks/main.yml
@@ -8,7 +8,7 @@
     dest: '{{ remote_db_temp_dir }}'
 
 - name: Delete gateway database # noqa 305 must use shell
-  no_log: true # don't log decrypted passwords in responses
+  no_log: "{{ no_log }}" # don't log decrypted passwords in responses
   shell:
     cmd: mysqladmin -u {{ database_user }} -p{{ database_pass }} drop {{ database_name }} -f
   failed_when: false
@@ -16,21 +16,21 @@
   changed_when: status.rc == 0
 
 - name: create gateway database # noqa 305 must use shell
-  no_log: true # don't log decrypted passwords in responses
+  no_log: "{{ no_log }}" # don't log decrypted passwords in responses
   shell:
     cmd: mysqladmin -u {{ database_user }} -p{{ database_pass }} create {{ database_name }}
   register: status
   changed_when: status.rc == 0
 
 - name: import gateway database from source gateway # noqa 305 must use shell
-  no_log: true # don't log decrypted passwords in responses
+  no_log: "{{ no_log }}" # don't log decrypted passwords in responses
   shell:
     cmd: mysql  -u {{ database_user }} -p{{ database_pass }} {{ database_name }} < {{ remote_db_temp_dir }}/ssg.sql
   register: status
   changed_when: status.rc == 0
 
 - name: clean up cluster_info table # noqa 305 must use shell
-  no_log: true
+  no_log: "{{ no_log }}"
   shell:
     cmd: mysql  -u {{ database_user }} -p{{ database_pass }} -e 'truncate table ssg.cluster_info'
   register: status
@@ -40,30 +40,30 @@
   when: otkdb_name is defined
   block:
     - name: create otk user if not exists # noqa 305 must use shell
-      no_log: true # don't log decrypted passwords in responses
+      no_log: "{{ no_log }}" # don't log decrypted passwords in responses
       shell:
         cmd: mysql -u {{ database_admin_user }} -p{{ database_admin_passpwd }} -e "{{ command_mysql_create_otkuser }}"
 
     - name: grant otk user privileges # noqa 305 must use shell
-      no_log: true # don't log decrypted passwords in responses
+      no_log: "{{ no_log }}" # don't log decrypted passwords in responses
       shell:
         cmd: mysql -u {{ database_admin_user }} -p{{ database_admin_pass }} -e "{{ command_mysql_grant_otkuser_privileges }}"
 
     - name: delete otk database # noqa 305 must use shell
-      no_log: true # don't log decrypted passwords in responses
+      no_log: "{{ no_log }}" # don't log decrypted passwords in responses
       shell:
         cmd: mysqladmin  -u {{ database_admin_user }} -p{{ database_admin_pass }} drop {{ otkdb_name }} -f
       failed_when: false
 
     - name: create otk database # noqa 305 must use shell
-      no_log: true # don't log decrypted passwords in responses
+      no_log: "{{ no_log }}" # don't log decrypted passwords in responses
       shell:
         cmd: mysqladmin -u {{ database_admin_user }} -p{{ database_admin_pass }} create {{ otkdb_name }}
       register: status
       changed_when: status.rc == 0
 
     - name: import otk database
-      no_log: true # don't log decrypted passwords in responses
+      no_log: "{{ no_log }}" # don't log decrypted passwords in responses
       shell:
         cmd: mysql -u {{ database_admin_user }} -p{{ database_admin_pass }} {{ otkdb_name }} < {{ remote_db_temp_dir }}/otk.sql
 
